3a_output_formatting
>>> risultato = emotion_detector("I love this new technology.")
>>> print risultato
  File "<stdin>", line 1
    print risultato
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
>>> print (risultato)
{'anger': 0.01364663, 'disgust': 0.0017160787, 'fear': 0.008986978, 'joy': 0.9719017, 'sadness': 0.055187024, 'dominant_emotion': 'joy'}
>>> 
>>> risultato = emotion_detector("I am so hapy i am doing this")
>>> print (risultato)
{'anger': 0.047973197, 'disgust': 0.03604413, 'fear': 0.09487512, 'joy': 0.52808076, 'sadness': 0.26057696, 'dominant_emotion': 'joy'}
